--- a/Oma/index.html
+++ b/Oma/index.html
@@ -143,7 +143,7 @@
                     <div class="card">
                         <img class="card-img" src="./assets/pic (11).jpg" alt="">
                         <div class="card-text">
-                            <p class="card-name">Badee al oud</p>
+                            <p class="card-name">Badee al Oud</p>
                             <p>&#8358;14,000</p>
                         </div>
                     </div>
