started laptop.editted perfumes

--- a/Oma/index.html
+++ b/Oma/index.html
@@ -235,7 +235,7 @@
 
     <div class="more">LOAD MORE</div>
     <article id="about">
-        <div class="black">
+        <div class="black-lg">
         <h3 class="article-name">ABOUT</h3>
         <div class="article-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum soluta qui quos voluptates? Quia odit
             totam blanditiis culpa explicabo rem iure consequatur ducimus, corporis sapiente, eius natus delectus
